k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: constants-mgmt
  labels:
    name: constants-mgmt
